--- a/lynda-git-index.html
+++ b/lynda-git-index.html
@@ -14,7 +14,7 @@
 <body>
 <h1> Home</h1>
 <h2> Revision One</h2>
-<p>The quick brown fox jumps over the lazy dog</p>
+<p>Heavy boxes perform quick waltzes and jigs</p>
 
 
 </body>
