--- a/lynda-git-index.html
+++ b/lynda-git-index.html
@@ -13,8 +13,8 @@
 
 <body>
 <h1> Home</h1>
-<h2> Revision 2.2 </h2>
-<p>Heavy boxes perform quick waltzes and jigs Lorem ipsum dolor sit amet, consectetur adipisicing elit.  </p>
+<h2> Revision Three </h2>
+<p>Heavy boxes perform quick waltzes and jigs Lorem ipsum dolor sit amet, consectetur adipisicing elit.More text for three  </p>
 
 
 </body>
