--- a/lynda-git-index.html
+++ b/lynda-git-index.html
@@ -13,8 +13,8 @@
 
 <body>
 <h1> Home</h1>
-<h2> Revision Three </h2>
-<p>Heavy boxes perform quick waltzes and jigs Lorem ipsum dolor sit amet, consectetur adipisicing elit.More text for three  </p>
+<h2> Revision Four </h2>
+<p>Heavy boxes perform quick waltzes and jigs Lorem ipsum dolor sit amet, consectetur adipisicing elit.More text for three Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis aliquam incidunt itaque atque provident. Hic, eum. Harum, nulla quo, vel nostrum amet dolore quae voluptatum animi aperiam similique ut ducimus. </p>
 
 
 </body>
